--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSE457 - Assigment 3</title>
+    <title>CSE457 - Final Project Proposal</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
