--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <h1>Basic Info:</h1>
 
 <h2>The Team</h2>
-<p>Rachel Schoeman | email | id</p>
-<p>Brooks Kennedy | email | id</p>
+<p>Rachel Schoeman | rachelschoeman@wustl.edu | 473198</p>
+<p>Brooks Kennedy | brooks.kennedy@wustl.edu | 465058</p>
 <p>Leanne Krivaa | k.leanne@wustl.edu | id</p>
 <p class="strong">https://github.com/leannejk/CSE457-FinalProject.git</p>
 
@@ -26,21 +26,35 @@
 
 
 <h1>Project Objectives</h1>
+<p> The goal of this project is to visualize a user's music preferencs using their Spotify user ID</p>
 <h2>Our Questions</h2>
+<p> What genres does this person listen to the most? What are their top artists? What albums do they listen to the most? Is there a way to give them recomendations? </p>
 <h2>Learn and Accomplish</h2>
+<p> We would like to learn how to use APIs to create an interactive interface. We hope to accomplish this by using the Spotify API. We want users to better understand their own music preferences to find trends in their personal data.</p>
 <h2>benefits</h2>
+<p> Listening to music can be done individually or in a group. Music preferences is a common topic people bring up when starting friendships. We hope to create a platform where users can better understand their taste in music and easily compare it with other people.</p>
 
 <h1>Data</h1>
-<p>We will get different data each time a user uses our website......</p>
 
+<p>We will get different data each time a user uses our website. We will retreive this data using the spotify API to pull up data on specific tracks. </p>
+<p> documentation for the API: https://developer.spotify.com/documentation/web-api/ </p>
 <h1>Data Processing</h1>
+<p> We do not expect to have to do significant data cleanup. We may provide a couple of sample usernames for users to see generic spotify data and we can use python to analyze results. Maybe these specific cases will specific genres</p>
 
 <h1>Visualization Design</h1>
 
 <h1>Must-Have Features</h1>
+<p> Users must be able to enter in their information to view personal preferences. To do this we need interaction between a front and back end</p>
+<p> We must display top genres, artsis and tracks on this page.</p>
+<p> Our project must be interactive. Ideally, we will have it so users can click on a specific artist and view the artist's top tracks.</p>
 
 <h1>Optional Features</h1>
-
+<p> As our project continues to evolve, there are more ideas we can incorperate. Some things we have already thought of that may be fun is creating a playlist or comparing data with another user. </p>
+<p> Maybe we can also make it so users can select subsets of their music to visualize. For example, maybe they can analyze a specific one of their playlists.</p>
 <h1>Project Schedule</h1>
+<p> proposal: finish a proposal draft by Tuesday October 26th</p>
+<p> prototype 1: start working on creating a prototype on October 28th to avoid working over the weekend. Meet three times the following week to significant progress. We will finish the rest up independently the weekend before it is do or meet on zoom </p>
+<p> prototype 2: start working immediately after protype one is due (November 9th) in order to avoid working the short week before thanksgiving</p>
+<p> presentation: the week after thanksgiving break (November 29th) we will meet up to record a demo and practice a presentation. We will outline key points before meeting as a group. </p>
 </body>
 </html>
