--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2>The Team</h2>
 <p>Rachel Schoeman | rachelschoeman@wustl.edu | 473198</p>
 <p>Brooks Kennedy | brooks.kennedy@wustl.edu | 465058</p>
-<p>Leanne Krivaa | k.leanne@wustl.edu | id</p>
+<p>Leanne Krivaa | k.leanne@wustl.edu | 500254 </p>
 <p class="strong">https://github.com/leannejk/CSE457-FinalProject.git</p>
 
 
@@ -42,6 +42,13 @@
 <p> We do not expect to have to do significant data cleanup. We may provide a couple of sample usernames for users to see generic spotify data and we can use python to analyze results. Maybe these specific cases will specific genres</p>
 
 <h1>Visualization Design</h1>
+<img src="sketches/login.jpg" alt="login">
+<img src="sketches/genres.jpg" alt="genres">
+<img src="sketches/artists.jpg" alt="artists">
+<img src="sketches/onclickartist.jpg" alt="on click artist">
+<img src="sketches/makemeaplaylist.jpg" alt="playlist">
+
+
 
 <h1>Must-Have Features</h1>
 <p> Users must be able to enter in their information to view personal preferences. To do this we need interaction between a front and back end</p>
